@@ -66,7 +66,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::ShareDir" => 0,
     "Dist::Zilla::Plugin::TemplateModule" => 0,
-    "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
+    "Dist::Zilla::Plugin::Test::ReportPrereqs" => "0.022",
     "Dist::Zilla::Plugin::TestRelease" => 0,
     "Dist::Zilla::Plugin::UploadToCPAN" => 0,
     "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
@@ -86,7 +86,7 @@ my %WriteMakefileArgs = (
     "Test::File::ShareDir::Module" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.025",
+  "VERSION" => "0.026",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -136,7 +136,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::ShareDir" => 0,
   "Dist::Zilla::Plugin::TemplateModule" => 0,
-  "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
+  "Dist::Zilla::Plugin::Test::ReportPrereqs" => "0.022",
   "Dist::Zilla::Plugin::TestRelease" => 0,
   "Dist::Zilla::Plugin::UploadToCPAN" => 0,
   "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
