@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Bump required version of [Test::ReportPrereqs] for Module::Metadata version extractor option
 
 0.025     2016-07-21 14:37:00 EDT
   - Generate CONTRIBUTING.md in build and copy from build to root
